browse page sorting and populating

--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -4,19 +4,19 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-4">
 			<h3>Newest</h3>
-			<div ng-repeat="user in users[0] | limitTo: 8">
+			<div ng-repeat="user in usersNewest | limitTo: 6">
 			<a ng-href="/#/profile/{{user.username}}"><b>{{user.username}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<h3>Prolific</h3>
-			<div ng-repeat="user in users[0] | limitTo: 8">
+			<div ng-repeat="user in usersProlific | limitTo: 6">
 			<a ng-href="/#/profile/{{user.username}}"><b>{{user.username}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<h3>Random</h3>
-			<div ng-repeat="user in users[0] | limitTo: 8">
+			<div ng-repeat="user in usersRandom | limitTo: 6">
 			<a ng-href="/#/profile/{{user.username}}"><b>{{user.username}}</b></a>
 			</div>
 		</div>
@@ -25,19 +25,19 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-4">
 			<h3>Newest</h3>
-			<div ng-repeat="story in stories[0] | limitTo: 8">
+			<div ng-repeat="story in storiesNewest | limitTo: 6">
 			<a ng-href="/#/stories/{{story._id}}"><b>{{story.title}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<h3>Popular</h3>
-			<div ng-repeat="story in stories[0] | limitTo: 8">
+			<div ng-repeat="story in storiesPopular | limitTo: 6">
 			<a ng-href="/#/stories/{{story._id}}"><b>{{story.title}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<h3>Random</h3>
-			<div ng-repeat="story in stories[0] | limitTo: 8">
+			<div ng-repeat="story in storiesRandom | limitTo: 6">
 			<a ng-href="/#/stories/{{story._id}}"><b>{{story.title}}</b></a>
 		</div>
 	</div>
@@ -47,19 +47,19 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-4">
 			<h3>Newest</h3>
-			<div ng-repeat="poem in poems[0] | limitTo: 8">
+			<div ng-repeat="poem in poemsNewest | limitTo: 6">
 			<a ng-href="/#/poems/{{poem._id}}"><b>{{poem.title}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<h3>Popular</h3>
-			<div ng-repeat="poem in poems[0] | limitTo: 8">
+			<div ng-repeat="poem in poemsPopular | limitTo: 6">
 			<a ng-href="/#/poems/{{poem._id}}"><b>{{poem.title}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<h3>Random</h3>
-			<div ng-repeat="poem in poems[0] | limitTo: 8">
+			<div ng-repeat="poem in poemsRandom | limitTo: 6">
 			<a ng-href="/#/poems/{{poem._id}}"><b>{{poem.title}}</b></a>
 			</div>
 		</div>
@@ -68,19 +68,19 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-4">
 			<h3>Newest</h3>
-			<div ng-repeat="essay in essays[0] | limitTo: 8">
+			<div ng-repeat="essay in essaysNewest | limitTo: 6">
 			<a ng-href="/#/essays/{{essay._id}}"><b>{{essay.title}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
-			<h3>Prolific</h3>
-			<div ng-repeat="essay in essays[0] | limitTo: 8">
+			<h3>Popular</h3>
+			<div ng-repeat="essay in essaysPopular | limitTo: 6">
 			<a ng-href="/#/essays/{{essay._id}}"><b>{{essay.title}}</b></a>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4">
 			<h3>Random</h3>
-			<div ng-repeat="essay in essays[0] | limitTo: 8">
+			<div ng-repeat="essay in essaysRandom | limitTo: 6">
 			<a ng-href="/#/essays/{{essay._id}}"><b>{{essay.title}}</b></a>
 			</div>	
 		</div>
