--- a/public/html/private/submission.html
+++ b/public/html/private/submission.html
@@ -22,9 +22,9 @@
 		<textarea class="medium-area" placeholder="Add a comment..." ng-model="$parent.comment"></textarea>
 		<input class="btn btn-default" type="submit">
 	</form>
-	<div ng-repeat="comment in comments[0]">
+	<div ng-repeat="comment in comments">
 		<h3>{{comment.username}}</h3>
-		<div><b>{{comment.date}}</b></div>
+		<div><b>{{comment.date | date:"MMMM d 'at' h:mm a"}}</b></div>
 		<div>{{comment.comment}}</div>
 	</div>
 </div>
