--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -1,14 +1,14 @@
 <div class="view container">
-	<h2 class="browse-heading content-odd">Users</h2>
+	<h2 class="browse-heading content-purple">Users</h2>
 	<div class="row">
-		<div class="content-box content-purple col-xs-12 col-sm-4">
+		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Newest</h3>
 			<div ng-repeat="user in usersNewest | limitTo: 6">
 			<a ng-href="/#/profile/{{user.username}}"><b>{{user.username}}</b></a><br>Joined {{user.dateJoined | date:"MMMM d 'at' h:mm a" }}
 			<hr>
 			</div>
 		</div>
-		<div class="content-even content-box col-xs-12 col-sm-4">
+		<div class="content-odd content-box col-xs-12 col-sm-4">
 			<h3>Prolific</h3>
 			<div ng-repeat="user in usersProlific | limitTo: 6">
 			<a ng-href="/#/profile/{{user.username}}"><b>{{user.username}}</b></a><br>
@@ -16,7 +16,7 @@
 			<hr>
 			</div>
 		</div>
-		<div class="content-purple content-box col-xs-12 col-sm-4">
+		<div class="content-odd content-box col-xs-12 col-sm-4">
 			<h3>Random</h3>
 			<div ng-repeat="user in usersRandom | limitTo: 6">
 			<a ng-href="/#/profile/{{user.username}}"><b>{{user.username}}</b></a><br>
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 	</div>
-	<h2 class="browse-heading content-even">Stories</h2>
+	<h2 class="browse-heading content-purple">Stories</h2>
 	<div class="row">
 		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Newest</h3>
@@ -34,7 +34,7 @@
 			<hr>
 			</div>
 		</div>
-		<div class="content-box content-purple col-xs-12 col-sm-4">
+		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Popular</h3>
 			<div ng-repeat="story in storiesPopular | limitTo: 6">
 			<a ng-href="/#/stories/{{story._id}}"><b>{{story.title}}</b></a><br>
@@ -52,23 +52,23 @@
 	</div>
 
 	</div>
-	<h2 class="browse-heading content-odd">Poems</h2>
+	<h2 class="browse-heading content-purple">Poems</h2>
 	<div class="row">
-		<div class="content-box content-purple col-xs-12 col-sm-4">
+		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Newest</h3>
 			<div ng-repeat="poem in poemsNewest | limitTo: 6">
 			<a ng-href="/#/poems/{{poem._id}}"><b>{{poem.title}}</b></a><br>Added {{poem.dateAdded |  date:"MMMM d 'at' h:mm a" }}
 			<hr>
 			</div>
 		</div>
-		<div class="content-box content-even col-xs-12 col-sm-4">
+		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Popular</h3>
 			<div ng-repeat="poem in poemsPopular | limitTo: 6">
 			<a ng-href="/#/poems/{{poem._id}}"><b>{{poem.title}}</b></a><br>{{poem.numComments}} comments
 			<hr>
 			</div>
 		</div>
-		<div class="content-box content-purple col-xs-12 col-sm-4">
+		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Random</h3>
 			<div ng-repeat="poem in poemsRandom | limitTo: 6">
 			<a ng-href="/#/poems/{{poem._id}}"><b>{{poem.title}}</b></a><br>{{poem.description}}
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 	</div>
-	<h2 class="browse-heading content-even">Essays</h2>
+	<h2 class="browse-heading content-purple">Essays</h2>
 	<div class="row">
 		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Newest</h3>
@@ -85,7 +85,7 @@
 			<hr>
 			</div>
 		</div>
-		<div class="content-box content-purple col-xs-12 col-sm-4">
+		<div class="content-box content-odd col-xs-12 col-sm-4">
 			<h3>Popular</h3>
 			<div ng-repeat="essay in essaysPopular | limitTo: 6">
 			<a ng-href="/#/essays/{{essay._id}}"><b>{{essay.title}}</b></a><br>{{essay.numComments}} comments
