--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,14 +1,16 @@
 <div class="view intro-page" class="container">
 	<div class="box main-box row">
 		<div>
-			<h1>Welcome to Just Write!</h1>
-			<p>
-			Suddenly, there were updates.
-			You may noticed some strange blank spaces on the site. I have added fields (registration date for users and submission date for all types of submissions) that I will need to manually update for those who registered and submitted before today. Otherwise, I hope you enjoy the updates! E-mail minplynn@aol.com with any requests/complaints/bugs.
-			</p>
-			<p>Just Write is just what it sounds like! It's a bare-bones site for writers to share their essays, stories, and poetry, with none of the distractions many other writing sites have. You won't find excessive images and video or social media here; communication is limited to comments on submissions, so that writers can focus on improving their work and helping others improve theirs. Sound like your cup of tea?</p>
-			<div class="dummy-container">
-				<button class="btn btn-default" type="button"><a href="/#/signup">Sign Up!</a></button>
+			<h1 class="content-box content-purple">Welcome to Just Write!</h1>
+			<div class="info-box content-odd">
+				<p>
+				Suddenly, there were updates.
+				You may noticed some strange blank spaces on the site. I have added fields (registration date for users and submission date for all types of submissions) that I will need to manually update for those who registered and submitted before today. Otherwise, I hope you enjoy the updates! E-mail minplynn@aol.com with any requests/complaints/bugs.
+				</p>
+				<p>Just Write is just what it sounds like! It's a bare-bones site for writers to share their essays, stories, and poetry, with none of the distractions many other writing sites have. You won't find excessive images and video or social media here; communication is limited to comments on submissions, so that writers can focus on improving their work and helping others improve theirs. Sound like your cup of tea?</p>
+				<div class="dummy-container">
+					<button class="btn btn-default" type="button"><a href="/#/signup">Sign Up!</a></button>
+				</div>
 			</div>
 		</div>
 	</div><!-- 
