just added message for users

--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -4,9 +4,15 @@
 			<h1 class="content-box content-purple">Welcome to Just Write!</h1>
 			<div class="info-box content-odd">
 				<p>
-				Suddenly, there were updates.
-				You may noticed some strange blank spaces on the site. I have added fields (registration date for users and submission date for all types of submissions) that I will need to manually update for those who registered and submitted before today. Otherwise, I hope you enjoy the updates! E-mail minplynn@aol.com with any requests/complaints/bugs.
-				</p>
+			Yay, updates! Except for bug fixes 
+			and some minor styling changes, I -think- this
+			site is ready for my presentation. Eventually,
+			I will add functionality so that you can delete
+			submissions and comments; edit your profiles;
+			and edit submissions and comments. Until then,
+			I hope you enjoy the site! Let minplynn@aol.com
+			know if you find any bugs!
+			</p>
 				<p>Just Write is just what it sounds like! It's a bare-bones site for writers to share their essays, stories, and poetry, with none of the distractions many other writing sites have. You won't find excessive images and video or social media here; communication is limited to comments on submissions, so that writers can focus on improving their work and helping others improve theirs. Sound like your cup of tea?</p>
 				<div class="dummy-container">
 					<button class="btn btn-default" type="button"><a href="/#/signup">Sign Up!</a></button>
