fixed sign up link problem

--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -15,7 +15,7 @@
 			</p>
 				<p>Just Write is just what it sounds like! It's a bare-bones site for writers to share their essays, stories, and poetry, with none of the distractions many other writing sites have. You won't find excessive images and video or social media here; communication is limited to comments on submissions, so that writers can focus on improving their work and helping others improve theirs. Sound like your cup of tea?</p>
 				<div class="dummy-container">
-					<button class="btn btn-default" type="button"><a href="/#/signup">Sign Up!</a></button>
+					<a class="btn btn-default" href="/#/signup/">Sign Up!</a>
 				</div>
 			</div>
 		</div>
