--- a/public/html/index.html
+++ b/public/html/index.html
@@ -30,7 +30,7 @@
 		<form ng-hide="loggedIn" class="view container text-center nav-list login-form" method="POST" action="auth/login">
 			<input name="username" type="text" placeholder="username...">
 			<input type="password" name="password" placeholder="password...">
-			<input class="btn-default btn" type="submit">
+			<input class="btn-default btn" type="submit" value="log in">
 		</form>
 		<br>
 		<div ng-view>
