--- a/public/html/private/profile.html
+++ b/public/html/private/profile.html
@@ -19,7 +19,7 @@
 	<br>
 	<h2 class="browse-heading content-purple">Submissions</h2>
 		<div class="row">
-			<div class="content-box content-odd col-xs-12 col-sm-4">
+			<div class="dynamic-box content-box content-odd col-xs-12 col-sm-6 col-md-4">
 				<h3>Stories</h3>
 				<div>{{storyMessage}}</div>
 				<div ng-repeat="story in stories">
@@ -28,7 +28,7 @@
 					<hr>
 				</div>
 			</div>
-			<div class="content-box content-odd col-xs-12 col-sm-4">
+			<div class="dynamic-box content-box content-odd col-xs-12 col-sm-6 col-md-4">
 				<h3>Essays</h3>
 				<div>{{essayMessage}}</div>
 				<div ng-repeat="essay in essays">
@@ -37,7 +37,7 @@
 					<hr>
 				</div>
 			</div>
-			<div class="content-box content-odd col-xs-12 col-sm-4">
+			<div class="dynamic-box content-box content-odd col-xs-12 col-sm-12 col-md-4">
 				<h3>Poems</h3>
 				<div>{{poemMessage}}</div>
 				<div ng-repeat="poem in poems">
