changed front page message

--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -3,38 +3,17 @@
 		<div>
 			<h1 class="content-box content-purple">Welcome to Just Write!</h1>
 			<div class="info-box content-odd">
-				<p>
-			Yay, updates! Except for bug fixes 
-			and some minor styling changes, I -think- this
-			site is ready for my presentation. Eventually,
-			I will add functionality so that you can delete
-			submissions and comments; edit your profiles;
-			and edit submissions and comments. Until then,
-			I hope you enjoy the site! Let minplynn@aol.com
-			know if you find any bugs!
-			</p>
 				<p>Just Write is just what it sounds like! It's a bare-bones site for writers to share their essays, stories, and poetry, with none of the distractions many other writing sites have. You won't find excessive images and video or social media here; communication is limited to comments on submissions, so that writers can focus on improving their work and helping others improve theirs. Sound like your cup of tea?</p>
+				<ul style="text-align: left;">
+					<h3>Recent Updates</h3>
+					<li><b>Mobile Responsiveness:</b> 
+					The layout of the site now responds to mobile devices. Minor fixes are needed for the margins, but it should be fully-functional on your phone or tablet.
+					</li>
+				</ul>
 				<div class="dummy-container">
 					<a class="btn btn-default" href="/#/signup/">Sign Up!</a>
 				</div>
 			</div>
 		</div>
-	</div><!-- 
-	<div class="centering-container row">
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-			<h2>Fun</h2>
-			<img src="/images/beehive.jpg">
-			<p>Earn colorful, nature-themed badges when you submit writing.</p>
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-			<h2>Focused</h2>
-			<img src="/images/branchingout.jpg">
-			<p>This site is all about writing, simple to use with none of the clutter of social media sites.</p>
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-			<h2>Friendly</h2>
-			<img src="/images/pack.jpg">
-			<p>Community-themed badges reward you for commenting on others' work.</p>
-		</div>
-	</div> -->
+	</div>
 </div>
